tests/negative/externs/default_opaque_extern.orng
extern ("int") const C_Int: Type

fn main() -> Int {
    comptime { 
        let mut xs: [5]C_Int
        xs[3] = 2
        xs[2] = 0xFFFFFFFFFFFFFFF
        xs[3] + 340
    }
}